--- a/alfonz-adapter/build.gradle
+++ b/alfonz-adapter/build.gradle
@@ -1,6 +1,6 @@
 final VERSION_MAJOR = 0 // max two digits
-final VERSION_MINOR = 0 // max two digits
-final VERSION_PATCH = 1 // max two digits
+final VERSION_MINOR = 1 // max two digits
+final VERSION_PATCH = 0 // max two digits
 final VERSION_BUILD = 0 // max three digits
 
 apply plugin: "com.android.library"
@@ -33,14 +33,11 @@ ext
 dependencies
 {
 	compile "com.android.support:support-compat:25.0.1"
-	compile "com.android.support:support-core-utils:25.0.1"
 	compile "com.android.support:support-core-ui:25.0.1"
-	compile "com.android.support:support-fragment:25.0.1"
-	compile "com.android.support:appcompat-v7:25.0.1"
 	compile "com.android.support:recyclerview-v7:25.0.1"
 	compile "com.android.support:support-annotations:25.0.1"
-	compile "com.android.support:design:25.0.1"
 	compile fileTree(dir: "libs", include: ["*.jar"])
+	compile project(":alfonz-mvvm")
 }
 
 android
@@ -69,6 +66,11 @@ android
 	{
 		sourceCompatibility JavaVersion.VERSION_1_7
 		targetCompatibility JavaVersion.VERSION_1_7
+	}
+
+	dataBinding
+	{
+		enabled = true
 	}
 }
 
