--- a/alfonz-rx/build.gradle
+++ b/alfonz-rx/build.gradle
@@ -1,9 +1,10 @@
 final VERSION_MAJOR = 0 // max two digits
-final VERSION_MINOR = 0 // max two digits
-final VERSION_PATCH = 1 // max two digits
+final VERSION_MINOR = 1 // max two digits
+final VERSION_PATCH = 0 // max two digits
 final VERSION_BUILD = 0 // max three digits
 
 apply plugin: "com.android.library"
+apply plugin: "me.tatarka.retrolambda"
 
 ext
 {
@@ -32,14 +33,9 @@ ext
 
 dependencies
 {
-	compile "com.android.support:support-compat:25.0.1"
-	compile "com.android.support:support-core-utils:25.0.1"
-	compile "com.android.support:support-core-ui:25.0.1"
-	compile "com.android.support:support-fragment:25.0.1"
-	compile "com.android.support:appcompat-v7:25.0.1"
-	compile "com.android.support:recyclerview-v7:25.0.1"
 	compile "com.android.support:support-annotations:25.0.1"
-	compile "com.android.support:design:25.0.1"
+	compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+	compile "io.reactivex.rxjava2:rxjava:2.0.2"
 	compile fileTree(dir: "libs", include: ["*.jar"])
 }
 
@@ -67,8 +63,8 @@ android
 
 	compileOptions
 	{
-		sourceCompatibility JavaVersion.VERSION_1_7
-		targetCompatibility JavaVersion.VERSION_1_7
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
 	}
 }
 
