Rename artifacts because it has to match with module names, otherwise Bintray plugin will upload files to wrong directories

--- a/alfonz-rx/build.gradle
+++ b/alfonz-rx/build.gradle
@@ -13,7 +13,7 @@ ext
 
 	publishedGroupId = "org.alfonz"
 	libraryName = "Alfonz-Rx"
-	artifact = "rx"
+	artifact = "alfonz-rx"
 
 	libraryDescription = "Mr. Alfonz is here to help you build your Android app, make a development process easier and avoid boilerplate code."
 
