--- a/alfonz-utility/build.gradle
+++ b/alfonz-utility/build.gradle
@@ -12,7 +12,7 @@ ext
 
 	publishedGroupId = "org.alfonz"
 	libraryName = "Alfonz-Utility"
-	artifact = "utility"
+	artifact = "alfonz-utility"
 
 	libraryDescription = "Mr. Alfonz is here to help you build your Android app, make a development process easier and avoid boilerplate code."
 
