--- a/alfonz-adapter/build.gradle
+++ b/alfonz-adapter/build.gradle
@@ -12,7 +12,7 @@ ext
 
 	publishedGroupId = "org.alfonz"
 	libraryName = "Alfonz-Adapter"
-	artifact = "adapter"
+	artifact = "alfonz-adapter"
 
 	libraryDescription = "Mr. Alfonz is here to help you build your Android app, make a development process easier and avoid boilerplate code."
 
