--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -2,27 +2,29 @@ apply plugin: "com.android.application"
 
 dependencies
 {
-	compile "com.android.support:support-compat:25.0.1"
-	compile "com.android.support:support-core-utils:25.0.1"
-	compile "com.android.support:support-core-ui:25.0.1"
-	compile "com.android.support:support-fragment:25.0.1"
-	compile "com.android.support:appcompat-v7:25.0.1"
-	compile "com.android.support:recyclerview-v7:25.0.1"
-	compile "com.android.support:support-annotations:25.0.1"
-	compile "com.android.support:design:25.0.1"
+	compile "com.android.support:support-compat:25.1.0"
+	compile "com.android.support:support-core-utils:25.1.0"
+	compile "com.android.support:support-core-ui:25.1.0"
+	compile "com.android.support:support-fragment:25.1.0"
+	compile "com.android.support:appcompat-v7:25.1.0"
+	compile "com.android.support:recyclerview-v7:25.1.0"
+	compile "com.android.support:support-annotations:25.1.0"
+	compile "com.android.support:design:25.1.0"
 	compile fileTree(dir: "libs", include: ["*.jar"])
 	compile project(":alfonz-adapter")
+	compile project(":alfonz-graphics")
+	compile project(":alfonz-media")
 	compile project(":alfonz-mvvm")
 	compile project(":alfonz-rest")
 	compile project(":alfonz-rx")
-	compile project(":alfonz-ui")
 	compile project(":alfonz-utility")
+	compile project(":alfonz-view")
 }
 
 android
 {
 	compileSdkVersion 25
-	buildToolsVersion "25.0.1"
+	buildToolsVersion "25.0.2"
 
 	defaultConfig
 	{
