--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':samples', ':alfonz-adapter', ':alfonz-mvvm', ':alfonz-rest', ':alfonz-rx', ':alfonz-ui', ':alfonz-utility'
+include ':samples', ':alfonz-adapter', ':alfonz-graphics', ':alfonz-media', ':alfonz-mvvm', ':alfonz-rest', ':alfonz-rx', ':alfonz-utility', ':alfonz-view'
