--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: "me.tatarka.retrolambda"
 
 dependencies
 {
@@ -46,8 +47,8 @@ android
 
 	compileOptions
 	{
-		sourceCompatibility JavaVersion.VERSION_1_7
-		targetCompatibility JavaVersion.VERSION_1_7
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
 	}
 
 	dataBinding
