--- a/samples/src/main/AndroidManifest.xml
+++ b/samples/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 		android:supportsRtl="true">
 
 		<activity
-			android:name=".activity.MainActivity"
+			android:name=".SamplesActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard">
 			<intent-filter>
@@ -25,6 +25,46 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+
+		<activity
+			android:name=".alfonzadapter.AlfonzAdapterActivity"
+			android:label="@string/title_adapter"
+			android:launchMode="standard" />
+
+		<activity
+			android:name=".alfonzgraphics.AlfonzGraphicsActivity"
+			android:label="@string/title_graphics"
+			android:launchMode="standard" />
+
+		<activity
+			android:name=".alfonzmedia.AlfonzMediaActivity"
+			android:label="@string/title_media"
+			android:launchMode="standard" />
+
+		<activity
+			android:name=".alfonzmvvm.AlfonzMvvmActivity"
+			android:label="@string/title_mvvm"
+			android:launchMode="standard" />
+
+		<activity
+			android:name=".alfonzrest.AlfonzRestActivity"
+			android:label="@string/title_rest"
+			android:launchMode="standard" />
+
+		<activity
+			android:name=".alfonzrx.AlfonzRxActivity"
+			android:label="@string/title_rx"
+			android:launchMode="standard" />
+
+		<activity
+			android:name=".alfonzutility.AlfonzUtilityActivity"
+			android:label="@string/title_utility"
+			android:launchMode="standard" />
+
+		<activity
+			android:name=".alfonzview.AlfonzViewActivity"
+			android:label="@string/title_view"
+			android:launchMode="standard" />
 
 	</application>
 </manifest>
