--- a/samples/src/main/AndroidManifest.xml
+++ b/samples/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 		android:name=".SamplesApplication"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
-		android:theme="@style/Theme.AppCompat.Light"
+		android:theme="@style/Theme.AppCompat.Light.NoActionBar"
 		android:hardwareAccelerated="true"
 		android:allowBackup="true"
 		android:supportsRtl="true">
@@ -19,6 +19,7 @@
 		<activity
 			android:name=".SamplesActivity"
 			android:label="@string/app_name"
+			android:theme="@style/Theme.AppCompat.Light"
 			android:launchMode="standard">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -29,42 +30,50 @@
 		<activity
 			android:name=".alfonzadapter.AdapterSampleActivity"
 			android:label="@string/title_adapter"
-			android:launchMode="standard" />
+			android:launchMode="standard"
+			android:parentActivityName=".SamplesActivity" />
 
 		<activity
 			android:name=".alfonzgraphics.GraphicsSampleActivity"
 			android:label="@string/title_graphics"
-			android:launchMode="standard" />
+			android:launchMode="standard"
+			android:parentActivityName=".SamplesActivity" />
 
 		<activity
 			android:name=".alfonzmedia.MediaSampleActivity"
 			android:label="@string/title_media"
-			android:launchMode="standard" />
+			android:launchMode="standard"
+			android:parentActivityName=".SamplesActivity" />
 
 		<activity
 			android:name=".alfonzmvvm.MvvmSampleActivity"
 			android:label="@string/title_mvvm"
-			android:launchMode="standard" />
+			android:launchMode="standard"
+			android:parentActivityName=".SamplesActivity" />
 
 		<activity
 			android:name=".alfonzrest.RestSampleActivity"
 			android:label="@string/title_rest"
-			android:launchMode="standard" />
+			android:launchMode="standard"
+			android:parentActivityName=".SamplesActivity" />
 
 		<activity
 			android:name=".alfonzrx.RxSampleActivity"
 			android:label="@string/title_rx"
-			android:launchMode="standard" />
+			android:launchMode="standard"
+			android:parentActivityName=".SamplesActivity" />
 
 		<activity
 			android:name=".alfonzutility.UtilitySampleActivity"
 			android:label="@string/title_utility"
-			android:launchMode="standard" />
+			android:launchMode="standard"
+			android:parentActivityName=".SamplesActivity" />
 
 		<activity
 			android:name=".alfonzview.ViewSampleActivity"
 			android:label="@string/title_view"
-			android:launchMode="standard" />
+			android:launchMode="standard"
+			android:parentActivityName=".SamplesActivity" />
 
 	</application>
 </manifest>
