--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -11,6 +11,12 @@ dependencies
 	compile "com.android.support:recyclerview-v7:25.2.0"
 	compile "com.android.support:support-annotations:25.2.0"
 	compile "com.android.support:design:25.2.0"
+	compile "com.google.code.gson:gson:2.8.0"
+	compile "com.squareup.okhttp3:okhttp:3.6.0"
+	compile "com.squareup.okhttp3:logging-interceptor:3.6.0"
+	compile "com.squareup.retrofit2:retrofit:2.2.0"
+	compile "com.squareup.retrofit2:adapter-rxjava2:2.2.0"
+	compile "com.squareup.retrofit2:converter-gson:2.2.0"
 	compile fileTree(dir: "libs", include: ["*.jar"])
 	compile project(":alfonz-adapter")
 	compile project(":alfonz-graphics")
@@ -38,8 +44,19 @@ android
 
 	buildTypes
 	{
+		debug
+		{
+			buildConfigField "boolean", "LOGS", "true"
+			buildConfigField "boolean", "DEV_ENVIRONMENT", "true"
+
+			versionNameSuffix "-debug"
+		}
+
 		release
 		{
+			buildConfigField "boolean", "LOGS", "false"
+			buildConfigField "boolean", "DEV_ENVIRONMENT", "false"
+
 			minifyEnabled false
 			proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
 		}
