Utility module sample

--- a/samples/src/main/AndroidManifest.xml
+++ b/samples/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 	<application
 		android:name=".SamplesApplication"
@@ -69,7 +71,8 @@
 			android:name=".alfonzutility.UtilitySampleActivity"
 			android:label="@string/title_utility"
 			android:launchMode="standard"
-			android:parentActivityName=".SamplesActivity" />
+			android:parentActivityName=".SamplesActivity"
+			android:windowSoftInputMode="stateHidden" />
 
 		<activity
 			android:name=".alfonzview.ViewSampleActivity"
