--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@
 //        gradlew :module:install         Build a specific module
 //        gradlew :module:bintrayUpload   Upload a specific module to Bintray
 //
-// New release TO-DO: update version, install, commit, add tag, push, publish to bintray, merge to master
+// New release TO-DO: update version in gradle and doc, build and test samples, install library, publish to bintray,
+//                    commit, add tag, push, merge to master
 
 buildscript {
 	repositories {
