--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -11,12 +11,12 @@ dependencies
 	compile "com.android.support:recyclerview-v7:25.3.1"
 	compile "com.android.support:support-annotations:25.3.1"
 	compile "com.android.support:design:25.3.1"
-	compile "com.google.code.gson:gson:2.8.0"
-	compile "com.squareup.okhttp3:okhttp:3.7.0"
-	compile "com.squareup.okhttp3:logging-interceptor:3.7.0"
-	compile "com.squareup.retrofit2:retrofit:2.2.0"
-	compile "com.squareup.retrofit2:adapter-rxjava2:2.2.0"
-	compile "com.squareup.retrofit2:converter-gson:2.2.0"
+	compile "com.google.code.gson:gson:2.8.1"
+	compile "com.squareup.okhttp3:okhttp:3.8.0"
+	compile "com.squareup.okhttp3:logging-interceptor:3.8.0"
+	compile "com.squareup.retrofit2:retrofit:2.3.0"
+	compile "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+	compile "com.squareup.retrofit2:converter-gson:2.3.0"
 	compile fileTree(dir: "libs", include: ["*.jar"])
 	compile project(":alfonz-adapter")
 	compile project(":alfonz-graphics")
@@ -31,7 +31,7 @@ dependencies
 android
 {
 	compileSdkVersion 25
-	buildToolsVersion "25.0.2"
+	buildToolsVersion "25.0.3"
 
 	defaultConfig
 	{
@@ -40,6 +40,7 @@ android
 		targetSdkVersion 25
 		versionCode 1
 		versionName "1.0.0"
+		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 	}
 
 	buildTypes
