--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,10 @@ buildscript {
 		jcenter()
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:2.3.3'
-		classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-		classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-		classpath 'me.tatarka:gradle-retrolambda:3.6.1'
+		classpath "com.android.tools.build:gradle:2.3.3"
+		classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3"
+		classpath "com.github.dcendents:android-maven-gradle-plugin:1.5"
+		classpath "me.tatarka:gradle-retrolambda:3.6.1"
 
 		// NOTE: Do not place your application dependencies here; they belong
 		// in the individual module build.gradle files
@@ -26,6 +26,9 @@ buildscript {
 allprojects {
 	repositories {
 		jcenter()
+		maven {
+			url "https://maven.google.com"
+		}
 	}
 }
 
