--- a/alfonz-rx/build.gradle
+++ b/alfonz-rx/build.gradle
@@ -1,72 +1,47 @@
-final VERSION_MAJOR = 0 // max two digits
-final VERSION_MINOR = 5 // max two digits
-final VERSION_PATCH = 0 // max two digits
-final VERSION_BUILD = 0 // max three digits
-
 apply plugin: "com.android.library"
 apply plugin: "me.tatarka.retrolambda"
+apply from: "../utils.gradle"
 
-ext
-{
-	bintrayRepo = "maven"
+
+ext {
 	bintrayName = "alfonz-rx"
-
-	publishedGroupId = "org.alfonz"
 	libraryName = "Alfonz-Rx"
 	artifact = "alfonz-rx"
-
-	libraryDescription = "Mr. Alfonz is here to help you build your Android app, make a development process easier and avoid boilerplate code."
-
-	siteUrl = "https://github.com/petrnohejl/Alfonz"
-	gitUrl = "https://github.com/petrnohejl/Alfonz.git"
-
-	libraryVersion = "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
-
-	developerId = "alfonz"
-	developerName = "Alfonz"
-	developerEmail = ""
-
-	licenseName = "The Apache Software License, Version 2.0"
-	licenseUrl = "http://www.apache.org/licenses/LICENSE-2.0.txt"
-	allLicenses = ["Apache-2.0"]
 }
 
-dependencies
-{
-	compile "com.android.support:support-annotations:25.4.0"
-	compile "io.reactivex.rxjava2:rxandroid:2.0.1"
-	compile "io.reactivex.rxjava2:rxjava:2.1.0"
-	compile fileTree(dir: "libs", include: ["*.jar"])
-}
 
-android
-{
+android {
 	compileSdkVersion 25
 	buildToolsVersion "25.0.3"
 
-	defaultConfig
-	{
+	defaultConfig {
 		minSdkVersion 16
 		targetSdkVersion 25
-		versionCode VERSION_MAJOR * 10000000 + VERSION_MINOR * 100000 + VERSION_PATCH * 1000 + VERSION_BUILD
-		versionName "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
+		versionCode getVersionCode(majorVersion, minorVersion, patchVersion, buildVersion)
+		versionName getVersionName(majorVersion, minorVersion, patchVersion)
 	}
 
-	buildTypes
-	{
-		release
-		{
+	buildTypes {
+		release {
 			minifyEnabled false
 			proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
 		}
 	}
 
-	compileOptions
-	{
+	compileOptions {
 		sourceCompatibility JavaVersion.VERSION_1_8
 		targetCompatibility JavaVersion.VERSION_1_8
 	}
 }
+
+
+dependencies {
+	compile fileTree(dir: "libs", include: ["*.jar"])
+	compile "com.android.support:support-annotations:$androidSupportVersion"
+	compile "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+	compile "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+}
+
 
 apply from: "../install.gradle"
 apply from: "../bintray.gradle"
