--- a/samples/src/main/AndroidManifest.xml
+++ b/samples/src/main/AndroidManifest.xml
@@ -80,5 +80,9 @@
 			android:launchMode="standard"
 			android:parentActivityName=".SamplesActivity" />
 
+		<service
+			android:name=".alfonzutility.UtilitySampleService"
+			android:label="Utility Sample Service" />
+
 	</application>
 </manifest>
