--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -68,4 +68,7 @@ dependencies {
 	compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
 	compile "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 	compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+	debugCompile "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
+	releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
+	testCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
 }
