--- a/samples/src/main/AndroidManifest.xml
+++ b/samples/src/main/AndroidManifest.xml
@@ -56,6 +56,12 @@
 			android:parentActivityName=".SamplesActivity" />
 
 		<activity
+			android:name=".alfonzmvvm.MvvmSampleViewModelActivity"
+			android:label="MvvmSampleViewModelActivity"
+			android:launchMode="standard"
+			android:parentActivityName=".SamplesActivity" />
+
+		<activity
 			android:name=".alfonzrest.RestSampleActivity"
 			android:label="@string/title_rest"
 			android:launchMode="standard"
@@ -82,7 +88,7 @@
 
 		<service
 			android:name=".alfonzutility.UtilitySampleService"
-			android:label="Utility Sample Service" />
+			android:label="UtilitySampleService" />
 
 	</application>
 </manifest>
