--- a/alfonz-view/build.gradle
+++ b/alfonz-view/build.gradle
@@ -36,6 +36,7 @@ android {
 
 dependencies {
 	compile fileTree(dir: "libs", include: ["*.jar"])
+	compile "com.android.support:support-annotations:$androidSupportVersion"
 }
 
 
