--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,34 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 //
-// Usage: gradlew install                 Build
-//        gradlew bintrayUpload           Upload to Bintray
-//        gradlew :module:install         Build a specific module
-//        gradlew :module:bintrayUpload   Upload a specific module to Bintray
+// Usage:
+// * gradlew install                 Build
+// * gradlew bintrayUpload           Upload to Bintray
+// * gradlew :module:install         Build a specific module
+// * gradlew :module:bintrayUpload   Upload a specific module to Bintray
 //
-// New release TO-DO: update version in gradle and doc, build and test samples, install library, publish to bintray,
-//                    commit, add tag, push, merge to master
+// New release TO-DO:
+// * Update version in gradle and doc
+// * Update changelog
+// * Build and test samples
+// * Install library
+// * Publish to Bintray
+// * Commit
+// * Add tag
+// * Push
+// * Merge to master
 
 buildscript {
 	ext {
 		majorVersion = 0 // max two digits
-		minorVersion = 5 // max two digits
+		minorVersion = 6 // max two digits
 		patchVersion = 0 // max two digits
 		buildVersion = 0 // max three digits
 
 		androidSupportVersion = "25.4.0"
 		androidViewModelVersion = "1.3.1"
-		rxJavaVersion = "2.1.0"
+		rxJavaVersion = "2.1.1"
 		rxAndroidVersion = "2.0.1"
-		okHttpVersion = "3.8.0"
+		okHttpVersion = "3.8.1"
 		retrofitVersion = "2.3.0"
 		gsonVersion = "2.8.1"
 		leakCanaryVersion = "1.5.1"
