--- a/alfonz-rx/build.gradle
+++ b/alfonz-rx/build.gradle
@@ -38,6 +38,7 @@ android {
 dependencies {
 	compile fileTree(dir: "libs", include: ["*.jar"])
 	compile "com.android.support:support-annotations:$androidSupportVersion"
+	compile "com.jakewharton.rxrelay2:rxrelay:$rxRelayVersion"
 	compile "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
 	compile "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
 }
