--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,13 @@ buildscript {
 
 		androidSupportVersion = "25.4.0"
 		androidViewModelVersion = "1.3.1"
-		rxJavaVersion = "2.1.1"
-		rxAndroidVersion = "2.0.1"
-		okHttpVersion = "3.8.1"
-		retrofitVersion = "2.3.0"
 		gsonVersion = "2.8.1"
 		leakCanaryVersion = "1.5.1"
+		okHttpVersion = "3.8.1"
+		retrofitVersion = "2.3.0"
+		rxAndroidVersion = "2.0.1"
+		rxJavaVersion = "2.1.1"
+		rxRelayVersion = "2.0.0"
 
 		bintrayRepo = "maven"
 		publishedGroupId = "org.alfonz"
