--- a/alfonz-arch/build.gradle
+++ b/alfonz-arch/build.gradle
@@ -6,19 +6,18 @@ ext {
 	bintrayName = "alfonz-arch"
 	libraryName = "Alfonz-Arch"
 	artifact = "alfonz-arch"
-	libraryVersion = "0.8.0-beta.1"
 }
 
 
 android {
 	compileSdkVersion 26
-	buildToolsVersion "26.0.1"
+	buildToolsVersion "26.0.2"
 
 	defaultConfig {
 		minSdkVersion 16
 		targetSdkVersion 26
-		versionCode 800000
-		versionName "0.8.0-beta.1"
+		versionCode getVersionCode(majorVersion, minorVersion, patchVersion, buildVersion)
+		versionName getVersionName(majorVersion, minorVersion, patchVersion)
 	}
 
 	buildTypes {
@@ -42,11 +41,11 @@ android {
 dependencies {
 	compile fileTree(dir: "libs", include: ["*.jar"])
 	compile "android.arch.lifecycle:runtime:$androidArchVersion"
-	compile "android.arch.lifecycle:extensions:$androidArchVersion"
+	compile "android.arch.lifecycle:extensions:$androidArchBetaVersion"
 	compile "com.android.support:support-fragment:$androidSupportVersion"
 	compile "com.android.support:appcompat-v7:$androidSupportVersion"
 	compile "com.android.support:support-annotations:$androidSupportVersion"
-	annotationProcessor "android.arch.lifecycle:compiler:$androidArchVersion"
+	annotationProcessor "android.arch.lifecycle:compiler:$androidArchBetaVersion"
 }
 
 
