--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,16 @@ buildscript {
 		patchVersion = 0 // max two digits
 		buildVersion = 0 // max three digits
 
-		androidArchVersion = "1.0.0-alpha9"
-		androidSupportVersion = "26.0.2"
+		androidArchVersion = "1.0.0"
+		androidArchBetaVersion = "1.0.0-beta1"
+		androidSupportVersion = "26.1.0"
 		androidViewModelVersion = "1.3.3"
-		gsonVersion = "2.8.1"
-		leakCanaryVersion = "1.5.1"
-		okHttpVersion = "3.8.1"
+		gsonVersion = "2.8.2"
+		leakCanaryVersion = "1.5.4"
+		okHttpVersion = "3.9.0"
 		retrofitVersion = "2.3.0"
 		rxAndroidVersion = "2.0.1"
-		rxJavaVersion = "2.1.3"
+		rxJavaVersion = "2.1.4"
 		rxRelayVersion = "2.0.0"
 
 		bintrayRepo = "maven"
