--- a/alfonz-adapter/build.gradle
+++ b/alfonz-adapter/build.gradle
@@ -39,12 +39,12 @@ android {
 
 
 dependencies {
-	compile fileTree(dir: "libs", include: ["*.jar"])
-	compile "com.android.support:support-compat:$androidSupportVersion"
-	compile "com.android.support:support-core-ui:$androidSupportVersion"
-	compile "com.android.support:recyclerview-v7:$androidSupportVersion"
-	compile "com.android.support:support-annotations:$androidSupportVersion"
-	compile "com.android.support:support-v4:$androidSupportVersion" // https://stackoverflow.com/questions/41568032/android-data-binding-dependency-conflict-with-the-support-library
+	implementation fileTree(dir: "libs", include: ["*.jar"])
+	implementation "com.android.support:support-compat:$androidSupportVersion"
+	implementation "com.android.support:support-core-ui:$androidSupportVersion"
+	implementation "com.android.support:recyclerview-v7:$androidSupportVersion"
+	implementation "com.android.support:support-annotations:$androidSupportVersion"
+	implementation "com.android.support:support-v4:$androidSupportVersion" // https://stackoverflow.com/questions/41568032/android-data-binding-dependency-conflict-with-the-support-library
 }
 
 
