--- a/alfonz-graphics/build.gradle
+++ b/alfonz-graphics/build.gradle
@@ -35,8 +35,8 @@ android {
 
 
 dependencies {
-	compile fileTree(dir: "libs", include: ["*.jar"])
-	compile "com.android.support:support-annotations:$androidSupportVersion"
+	implementation fileTree(dir: "libs", include: ["*.jar"])
+	implementation "com.android.support:support-annotations:$androidSupportVersion"
 }
 
 
