--- a/alfonz-rx/build.gradle
+++ b/alfonz-rx/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: "com.android.library"
-apply plugin: "me.tatarka.retrolambda"
 apply from: "../utils.gradle"
 
 
@@ -36,12 +35,12 @@ android {
 
 
 dependencies {
-	compile fileTree(dir: "libs", include: ["*.jar"])
-	compile "com.android.support:support-core-utils:$androidSupportVersion"
-	compile "com.android.support:support-annotations:$androidSupportVersion"
-	compile "com.jakewharton.rxrelay2:rxrelay:$rxRelayVersion"
-	compile "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
-	compile "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+	implementation fileTree(dir: "libs", include: ["*.jar"])
+	implementation "com.android.support:support-core-utils:$androidSupportVersion"
+	implementation "com.android.support:support-annotations:$androidSupportVersion"
+	implementation "com.jakewharton.rxrelay2:rxrelay:$rxRelayVersion"
+	implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+	implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
 }
 
 
