--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -3,13 +3,13 @@ apply from: "../utils.gradle"
 
 
 android {
-	compileSdkVersion 26
-	buildToolsVersion "26.0.2"
+	compileSdkVersion 27
+	buildToolsVersion "27.0.2"
 
 	defaultConfig {
 		applicationId "org.alfonz.samples"
 		minSdkVersion 16
-		targetSdkVersion 26
+		targetSdkVersion 27
 		versionCode getVersionCode(majorVersion, minorVersion, patchVersion, buildVersion)
 		versionName getVersionName(majorVersion, minorVersion, patchVersion)
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -54,8 +54,8 @@ dependencies {
 	implementation project(":alfonz-rx")
 	implementation project(":alfonz-utility")
 	implementation project(":alfonz-view")
-	implementation "android.arch.lifecycle:runtime:$androidArchVersion"
-	implementation "android.arch.lifecycle:extensions:$androidArchBetaVersion"
+	implementation "android.arch.lifecycle:runtime:$androidArchRuntimeVersion"
+	implementation "android.arch.lifecycle:extensions:$androidArchVersion"
 	implementation "com.android.support:support-compat:$androidSupportVersion"
 	implementation "com.android.support:support-core-utils:$androidSupportVersion"
 	implementation "com.android.support:support-core-ui:$androidSupportVersion"
