--- a/alfonz-mvvm/build.gradle
+++ b/alfonz-mvvm/build.gradle
@@ -10,12 +10,12 @@ ext {
 
 
 android {
-	compileSdkVersion 26
-	buildToolsVersion "26.0.2"
+	compileSdkVersion 27
+	buildToolsVersion "27.0.2"
 
 	defaultConfig {
 		minSdkVersion 16
-		targetSdkVersion 26
+		targetSdkVersion 27
 		versionCode getVersionCode(majorVersion, minorVersion, patchVersion, buildVersion)
 		versionName getVersionName(majorVersion, minorVersion, patchVersion)
 	}
@@ -43,6 +43,7 @@ dependencies {
 	implementation "com.android.support:support-fragment:$androidSupportVersion"
 	implementation "com.android.support:appcompat-v7:$androidSupportVersion"
 	implementation "com.android.support:support-annotations:$androidSupportVersion"
+	implementation "com.android.support:support-v4:$androidSupportVersion" // https://stackoverflow.com/questions/41568032/android-data-binding-dependency-conflict-with-the-support-library
 	api "eu.inloop:androidviewmodel:$androidViewModelVersion"
 }
 
