--- a/build.gradle
+++ b/build.gradle
@@ -25,15 +25,15 @@ buildscript {
 		buildVersion = 0 // max three digits
 
 		androidArchVersion = "1.0.0"
-		androidArchBetaVersion = "1.0.0-beta1"
-		androidSupportVersion = "26.1.0"
-		androidViewModelVersion = "1.3.3"
+		androidArchRuntimeVersion = "1.0.3"
+		androidSupportVersion = "27.0.2"
+		androidViewModelVersion = "1.3.4"
 		gsonVersion = "2.8.2"
 		leakCanaryVersion = "1.5.4"
-		okHttpVersion = "3.9.0"
+		okHttpVersion = "3.9.1"
 		retrofitVersion = "2.3.0"
 		rxAndroidVersion = "2.0.1"
-		rxJavaVersion = "2.1.4"
+		rxJavaVersion = "2.1.7"
 		rxRelayVersion = "2.0.0"
 
 		bintrayRepo = "maven"
@@ -57,8 +57,8 @@ buildscript {
 
 	dependencies {
 		classpath "com.android.tools.build:gradle:3.0.1"
-		classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3"
-		classpath "com.github.dcendents:android-maven-gradle-plugin:1.5"
+		classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0"
+		classpath "com.github.dcendents:android-maven-gradle-plugin:2.0"
 
 		// NOTE: Do not place your application dependencies here; they belong
 		// in the individual module build.gradle files
