--- a/alfonz-arch/build.gradle
+++ b/alfonz-arch/build.gradle
@@ -11,7 +11,7 @@ ext {
 
 android {
 	compileSdkVersion 27
-	buildToolsVersion "27.0.2"
+	buildToolsVersion "27.0.3"
 
 	defaultConfig {
 		minSdkVersion 16
@@ -40,7 +40,7 @@ android {
 
 dependencies {
 	implementation fileTree(dir: "libs", include: ["*.jar"])
-	implementation "android.arch.lifecycle:runtime:$androidArchRuntimeVersion"
+	implementation "android.arch.lifecycle:runtime:$androidArchVersion"
 	implementation "android.arch.lifecycle:extensions:$androidArchVersion"
 	implementation "com.android.support:support-fragment:$androidSupportVersion"
 	implementation "com.android.support:appcompat-v7:$androidSupportVersion"
