--- a/alfonz-view/build.gradle
+++ b/alfonz-view/build.gradle
@@ -9,7 +9,7 @@ ext {
 
 android {
 	compileSdkVersion 29
-	buildToolsVersion "29.0.2"
+	buildToolsVersion "29.0.3"
 
 	defaultConfig {
 		minSdkVersion 16
@@ -33,7 +33,7 @@ android {
 
 dependencies {
 	implementation fileTree(dir: "libs", include: ["*.jar"])
-	implementation "androidx.annotation:annotation:1.1.0"
+	implementation "androidx.annotation:annotation:$androidxAnnotationVersion"
 }
 
 apply from: "../install.gradle"
