--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -3,7 +3,7 @@ apply from: "../utils.gradle"
 
 android {
 	compileSdkVersion 29
-	buildToolsVersion "29.0.2"
+	buildToolsVersion "29.0.3"
 
 	defaultConfig {
 		applicationId "org.alfonz.samples"
@@ -65,7 +65,6 @@ dependencies {
 	implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 	implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 	implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-	debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
-	releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
-	testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
+	implementation "com.squareup.leakcanary:leakcanary-object-watcher-android:2.4"
+	debugImplementation "com.squareup.leakcanary:leakcanary-android:2.4"
 }
