Update RxJava to version 3

--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -60,11 +60,12 @@ dependencies {
 	implementation "androidx.viewpager:viewpager:$androidxViewPagerVersion"
 	implementation "com.google.android.material:material:$materialVersion"
 	implementation "com.google.code.gson:gson:$gsonVersion"
-	implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
-	implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
-	implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
-	implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-	implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
 	implementation "com.squareup.leakcanary:leakcanary-object-watcher-android:2.4"
 	debugImplementation "com.squareup.leakcanary:leakcanary-android:2.4"
+	implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
+	implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
+	implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofitVersion"
+	implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+	implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+	implementation "io.reactivex.rxjava3:rxjava:$rxJavaVersion"
 }
