Fix lint warnings

--- a/alfonz-view/build.gradle
+++ b/alfonz-view/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
 	implementation fileTree(dir: "libs", include: ["*.jar"])
 	implementation "androidx.annotation:annotation:$androidxAnnotationVersion"
+	implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
 }
 
 apply from: "../install.gradle"
