--- a/alfonz-adapter/build.gradle
+++ b/alfonz-adapter/build.gradle
@@ -25,13 +25,13 @@ android {
 		}
 	}
 
+	buildFeatures {
+		dataBinding true
+	}
+
 	compileOptions {
 		sourceCompatibility JavaVersion.VERSION_1_7
 		targetCompatibility JavaVersion.VERSION_1_7
-	}
-
-	dataBinding {
-		enabled = true
 	}
 }
 
