--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -31,13 +31,13 @@ android {
 		}
 	}
 
+	buildFeatures {
+		dataBinding true
+	}
+
 	compileOptions {
 		sourceCompatibility JavaVersion.VERSION_1_8
 		targetCompatibility JavaVersion.VERSION_1_8
-	}
-
-	dataBinding {
-		enabled = true
 	}
 }
 
