--- a/build.gradle
+++ b/build.gradle
@@ -24,21 +24,22 @@ buildscript {
 		patchVersion = 3 // max two digits
 		buildVersion = 0 // max three digits
 
-		androidxAnnotationVersion = "1.2.0"
-		androidxAppCompatVersion = "1.2.0"
-		androidxCollectionVersion = "1.1.0"
-		androidxExifInterfaceVersion = "1.3.2"
-		androidxFragmentVersion = "1.3.2"
-		androidxLifecycleVersion = "2.2.0"
-		androidxRecyclerViewVersion = "1.1.0"
+		androidxAnnotationVersion = "1.3.0"
+		androidxAppCompatVersion = "1.4.1"
+		androidxCollectionVersion = "1.2.0"
+		androidxExifInterfaceVersion = "1.3.3"
+		androidxFragmentVersion = "1.4.1"
+		androidxLifecycleExtensionsVersion = "2.2.0"
+		androidxLifecycleRuntimeVersion = "2.4.1"
+		androidxRecyclerViewVersion = "1.2.0"
 		androidxViewPagerVersion = "1.0.0"
-		gsonVersion = "2.8.6"
-		materialVersion = "1.3.0"
-		okHttpVersion = "4.9.0"
+		gsonVersion = "2.9.0"
+		materialVersion = "1.5.0"
+		okHttpVersion = "4.9.3"
 		retrofitVersion = "2.9.0"
 		rxAndroidVersion = "3.0.0"
-		rxJavaVersion = "3.0.11"
-		rxRelayVersion = "3.0.0"
+		rxJavaVersion = "3.1.3"
+		rxRelayVersion = "3.0.1"
 
 		bintrayRepo = "maven"
 		publishedGroupId = "org.alfonz"
@@ -56,11 +57,12 @@ buildscript {
 
 	repositories {
 		google()
+		mavenCentral()
 		jcenter()
 	}
 
 	dependencies {
-		classpath "com.android.tools.build:gradle:4.1.3"
+		classpath "com.android.tools.build:gradle:7.1.1"
 		classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5"
 		classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
 
@@ -72,6 +74,7 @@ buildscript {
 allprojects {
 	repositories {
 		google()
+		mavenCentral()
 		jcenter()
 	}
 }
