--- a/alfonz-utility/build.gradle
+++ b/alfonz-utility/build.gradle
@@ -23,6 +23,8 @@ android {
 		sourceCompatibility JavaVersion.VERSION_11
 		targetCompatibility JavaVersion.VERSION_11
 	}
+
+	setProperty("archivesBaseName", getArtifactName(defaultConfig))
 }
 
 dependencies {
