--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -39,6 +39,8 @@ android {
 		sourceCompatibility JavaVersion.VERSION_11
 		targetCompatibility JavaVersion.VERSION_11
 	}
+
+	setProperty("archivesBaseName", getArtifactName(defaultConfig))
 }
 
 dependencies {
